src/ceal/tests/bug/906.gold
Error: (line 12:5 '76') Cannot invert 5929
